--- a/app/src/main/res/layout/list_order_row.xml
+++ b/app/src/main/res/layout/list_order_row.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/orderListLayout">
 
     <TextView
         android:layout_width="0dip"
