Sincronizando los productos desde archivo en el telefono

--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -73,6 +73,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="numberDecimal"
+            android:hint="@string/activity_product_add_precio"
             android:ems="10" />
     </TableRow>
 
