--- a/app/src/main/res/menu/sync_activity_menu.xml
+++ b/app/src/main/res/menu/sync_activity_menu.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/sync_items"
-        android:icon="@mipmap/perm_group_sync_settings"
+        android:icon="@mipmap/ic_menu_refresh"
         android:title="@string/activity_sync_items"
         app:showAsAction="always" />
 </menu>
