Se agrego manejo de session del login

--- a/app/src/main/res/layout/list_order_item.xml
+++ b/app/src/main/res/layout/list_order_item.xml
@@ -18,6 +18,7 @@
         android:layout_weight="5"
         android:textColor="@color/colorTextItemList"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
         android:id="@+id/order_item_name"/>
 
     <EditText
