--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -1,105 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context=".activity.AddProductActivity">
 
-    <TableRow>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/activity_product_add_codigo" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/activity_product_add_codigo" />
 
-        <TextView
-            android:id="@+id/add_product_codigo"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </TableRow>
+    <TextView
+        android:id="@+id/add_product_codigo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
-    <TableRow>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/activity_product_add_nombre" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/activity_product_add_nombre" />
 
-        <TextView
-            android:id="@+id/add_product_nombre"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </TableRow>
+    <TextView
+        android:id="@+id/add_product_nombre"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
-    <TableRow>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/activity_product_add_cajapor" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/activity_product_add_cajapor" />
 
-        <TextView
-            android:id="@+id/add_product_cajapor"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </TableRow>
+    <TextView
+        android:id="@+id/add_product_cajapor"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
-    <TableRow>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/activity_product_add_preciodos" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/activity_product_add_preciodos" />
 
-        <TextView
-            android:id="@+id/add_product_preciodos"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </TableRow>
+    <TextView
+        android:id="@+id/add_product_preciodos"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
-    <TableRow>
+    <EditText
+        android:id="@+id/add_product_precio"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="@string/product_add_price_hint"
+        android:inputType="numberDecimal" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/activity_product_add_precio" />
+    <EditText
+        android:id="@+id/add_product_cantidad"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="@string/product_add_quantity_hint"
+        android:inputType="number" />
 
-        <EditText
-            android:id="@+id/add_product_precio"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="numberDecimal"
-            android:hint="@string/activity_product_add_precio"
-            android:ems="10" />
-    </TableRow>
 
-    <TableRow>
+    <Button
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:id="@+id/add_product_btn_add"
+        android:text="@string/activity_product_add_btn_aceptar"
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/activity_product_add_cantidad" />
+        />
 
-        <EditText
-            android:id="@+id/add_product_cantidad"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="number"
-            android:ems="10" />
-    </TableRow>
 
-    <TableRow>
-
-        <Button
-            android:id="@+id/add_product_btn_add"
-            android:layout_span="2"
-            android:text="@string/activity_product_add_btn_aceptar"
-
-            />
-    </TableRow>
-
-</TableLayout>
+</LinearLayout>
