--- a/app/src/main/res/layout/list_order_row.xml
+++ b/app/src/main/res/layout/list_order_row.xml
@@ -9,24 +9,28 @@
         android:layout_width="0dip"
         android:layout_weight="1"
         android:layout_height="wrap_content"
+        android:textColor="@color/colorTextItemList"
         android:id="@+id/lblOrderCod"/>
 
     <TextView
         android:layout_width="0dip"
         android:layout_weight="1"
         android:layout_height="wrap_content"
+        android:textColor="@color/colorTextItemList"
         android:id="@+id/lblOrderClient"/>
 
     <TextView
         android:layout_width="0dip"
         android:layout_weight="1"
         android:layout_height="wrap_content"
+        android:textColor="@color/colorTextItemList"
         android:id="@+id/lblOrderTotalAmount"/>
 
     <TextView
         android:layout_width="0dip"
         android:layout_weight="1"
         android:layout_height="wrap_content"
+        android:textColor="@color/colorTextItemList"
         android:id="@+id/lblOrderDeliveryDate"/>
 
 </LinearLayout>
