Agregar estilos al listado de ordenes

--- a/app/src/main/res/layout/content_list_orders.xml
+++ b/app/src/main/res/layout/content_list_orders.xml
@@ -1,16 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_marginTop="@dimen/activity_vertical_margin_min"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".activity.ListOrdersActivity"
     tools:showIn="@layout/app_bar_list_orders">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="@color/colorPrimary">
+
+        <TextView
+            android:layout_width="0dip"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:textColor="@color/order_item_text_color"
+            android:textStyle="bold"
+            android:text="@string/order_row_cod_order"/>
+
+        <TextView
+            android:layout_width="0dip"
+            android:layout_weight="3"
+            android:layout_height="wrap_content"
+            android:textColor="@color/order_item_text_color"
+            android:textStyle="bold"
+            android:text="@string/order_row_name_client"/>
+
+        <TextView
+            android:layout_width="0dip"
+            android:layout_weight="2"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textColor="@color/order_item_text_color"
+            android:textStyle="bold"
+            android:layout_gravity="center"
+            android:text="@string/order_row_total_amount"/>
+
+        <TextView
+            android:layout_width="0dip"
+            android:layout_weight="2"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textColor="@color/order_item_text_color"
+            android:textStyle="bold"
+            android:layout_gravity="center"
+            android:text="@string/order_row_delivery_date"/>
+    </LinearLayout>
 
     <ListView
         android:layout_width="match_parent"
@@ -18,4 +59,4 @@
         android:id="@+id/lstRealOrders">
 
     </ListView>
-</RelativeLayout>
+</LinearLayout>
