--- a/app/src/main/res/layout/list_order_row.xml
+++ b/app/src/main/res/layout/list_order_row.xml
@@ -14,23 +14,25 @@
 
     <TextView
         android:layout_width="0dip"
-        android:layout_weight="1"
+        android:layout_weight="3"
         android:layout_height="wrap_content"
         android:textColor="@color/colorTextItemList"
         android:id="@+id/lblOrderClient"/>
 
     <TextView
         android:layout_width="0dip"
-        android:layout_weight="1"
+        android:layout_weight="2"
         android:layout_height="wrap_content"
         android:textColor="@color/colorTextItemList"
+        android:gravity="right"
         android:id="@+id/lblOrderTotalAmount"/>
 
     <TextView
         android:layout_width="0dip"
-        android:layout_weight="1"
+        android:layout_weight="3"
         android:layout_height="wrap_content"
         android:textColor="@color/colorTextItemList"
+        android:gravity="center"
         android:id="@+id/lblOrderDeliveryDate"/>
 
 </LinearLayout>
