Permitir seleccionar un item en la sincronizacion

--- a/app/src/main/res/layout/list_sync_item.xml
+++ b/app/src/main/res/layout/list_sync_item.xml
@@ -4,10 +4,13 @@
     android:layout_height="match_parent"
     android:id="@+id/listRealSyncItems">
 
-    <TextView
+    <CheckedTextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/colorTextItemList"
+        style="@style/PopupSelectList"
+        android:checkMark="@drawable/ratio"
+        android:ellipsize="marquee"
         android:id="@+id/chkSyncItem"/>
 
 </LinearLayout>
