--- a/app/src/main/res/layout/list_order_item_view.xml
+++ b/app/src/main/res/layout/list_order_item_view.xml
@@ -2,38 +2,41 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="@dimen/activity_padding_rows"
-    android:id="@+id/orderListLayout">
-
-    <TextView
-        android:layout_width="0dip"
-        android:layout_weight="1"
-        android:layout_height="wrap_content"
-        android:textColor="@color/colorTextItemList"
-        android:id="@+id/lblOrderCod"/>
+    android:layout_height="wrap_content"
+    android:id="@+id/orderItemListLayoutView">
 
     <TextView
         android:layout_width="0dip"
         android:layout_weight="3"
         android:layout_height="wrap_content"
         android:textColor="@color/colorTextItemList"
-        android:id="@+id/lblOrderClient"/>
+        android:textStyle="bold"
+        android:id="@+id/order_item_product_codView"/>
+
+    <TextView
+        android:layout_width="0dip"
+        android:layout_weight="6"
+        android:textColor="@color/colorTextItemList"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:id="@+id/order_item_nameView"/>
 
     <TextView
         android:layout_width="0dip"
         android:layout_weight="2"
         android:layout_height="wrap_content"
         android:textColor="@color/colorTextItemList"
+        android:singleLine="true"
         android:gravity="right"
-        android:id="@+id/lblOrderTotalAmount"/>
+        android:id="@+id/order_item_quantityView"/>
 
     <TextView
         android:layout_width="0dip"
         android:layout_weight="3"
         android:layout_height="wrap_content"
         android:textColor="@color/colorTextItemList"
+        android:singleLine="true"
         android:gravity="right"
-        android:id="@+id/lblOrderDeliveryDate"/>
+        android:id="@+id/order_item_priceView"/>
 
 </LinearLayout>
