--- a/app/src/main/res/layout/list_product_item.xml
+++ b/app/src/main/res/layout/list_product_item.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
+    android:padding="@dimen/activity_padding_rows_min"
     android:id="@+id/productItemListLayout">
 
     <TextView
