--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin_min">4dp</dimen>
     <dimen name="activity_vertical_margin_min">4dp</dimen>
+
+    <dimen name="activity_padding_rows">6dp</dimen>
+    <dimen name="activity_padding_rows_min">4dp</dimen>
 </resources>
