--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -60,6 +60,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="@string/product_add_price_hint"
+        android:maxLength="10"
         android:inputType="numberDecimal" />
 
     <EditText
@@ -68,7 +69,8 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="@string/product_add_quantity_hint"
-        android:inputType="number" />
+        android:maxLength="6"
+        android:inputType="numberDecimal" />
 
 
     <Button
