--- a/app/src/main/res/menu/activity_list_orders_drawer.xml
+++ b/app/src/main/res/menu/activity_list_orders_drawer.xml
@@ -12,8 +12,13 @@
             android:title="@string/nav_menu_new_order" />
         <item
             android:id="@+id/nav_sync"
-            android:icon="@mipmap/ic_menu_upload"
+            android:icon="@mipmap/ic_menu_refresh"
             android:title="@string/nav_menu_sync" />
+
+        <item
+            android:id="@+id/nav_export"
+            android:icon="@mipmap/ic_menu_upload"
+            android:title="@string/nav_menu_exportar" />
     </group>
 
 </menu>
