--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,6 +25,14 @@
         android:textStyle="bold"
         android:textAlignment="center" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/login_version"
+        android:textStyle="bold"
+        android:textAlignment="center" />
+
     <TableRow>
         <TextView
             android:layout_width="wrap_content"
@@ -67,12 +75,6 @@
         android:id="@+id/btnLogin"
         android:layout_below="@id/txtLoginPass"
         android:layout_centerHorizontal="true"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="right"
-        android:text="@string/login_version"
-        android:layout_below="@id/btnLogin"/>
 
 </TableLayout>
 </RelativeLayout>
