--- a/app/src/main/res/layout/activity_sync.xml
+++ b/app/src/main/res/layout/activity_sync.xml
@@ -10,6 +10,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".activity.SyncActivity">
 
+    <!-- el broster -->
+
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
