--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,4 +13,5 @@
 
     <dimen name="activity_padding_rows">6dp</dimen>
     <dimen name="activity_padding_rows_min">4dp</dimen>
+    <dimen name="appbar_padding_top">8dp</dimen>
 </resources>
