--- a/app/src/main/res/layout/fragment_tab_clients.xml
+++ b/app/src/main/res/layout/fragment_tab_clients.xml
@@ -7,26 +7,17 @@
     android:layout_height="match_parent"
     tools:context=".activity.MainActivity">
 
-    <EditText
-        android:id="@+id/txtSearchClient"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:inputType="textPersonName"
-        android:hint="@string/activity_client_lbl_search"
-        android:singleLine="true"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rcyViewClients"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtSearchClient"></android.support.v7.widget.RecyclerView>
+        app:layout_constraintTop_toTopOf="parent"></android.support.v7.widget.RecyclerView>
 
 </android.support.constraint.ConstraintLayout>
