--- a/app/src/main/res/layout/activity_view_order_detail.xml
+++ b/app/src/main/res/layout/activity_view_order_detail.xml
@@ -83,6 +83,24 @@
             android:layout_height="wrap_content" />
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/activity_order_type_payment_voucher"
+            android:textColor="@color/colorTextItemList"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/txtOrderPaymentVoucherTypeView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
 
     <LinearLayout
         android:layout_width="match_parent"
