--- a/app/src/main/res/layout/activity_new_order.xml
+++ b/app/src/main/res/layout/activity_new_order.xml
@@ -8,6 +8,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin_min"
     android:paddingTop="@dimen/activity_vertical_margin_min"
     android:orientation="vertical"
+    android:id="@+id/layout_new_order"
     tools:context=".activity.NewOrderActivity">
 
     <LinearLayout
