--- a/app/src/main/res/layout/activity_view_client.xml
+++ b/app/src/main/res/layout/activity_view_client.xml
@@ -172,5 +172,21 @@
         app:layout_constraintTop_toBottomOf="@+id/txtViewClientDni"
         tools:layout_width="0dp" />
 
+    <ImageView
+        android:id="@+id/imgViewSemaphore"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:contentDescription="@string/imagen_semaforo_desc"
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toTopOf="@+id/btnNewOrder"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtViewClientDni"
+        tools:srcCompat="@tools:sample/avatars" />
+
 
 </android.support.constraint.ConstraintLayout>
