feat: Save pending orders to cloud

--- a/app/src/main/res/layout/fragment_tab_clients.xml
+++ b/app/src/main/res/layout/fragment_tab_clients.xml
@@ -7,6 +7,17 @@
     android:layout_height="match_parent"
     tools:context=".activity.MainActivity">
 
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/shimmer"
+        >
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/placeholder_bg"/>
+    </com.facebook.shimmer.ShimmerFrameLayout>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rcyViewClients"
         android:layout_width="0dp"
